Doc/force-app/main/default/objects/Knowledge_Base__kav/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>