Doc/force-app/main/default/objects/Knowledge_Base__kav/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intapp Flow</fullName>
            </value>
            <value>
                <fullName>Intapp Integrate</fullName>
            </value>
            <value>
                <fullName>Intapp Open Intake</fullName>
            </value>
            <value>
                <fullName>Intapp Open Conflicts</fullName>
            </value>
            <value>
                <fullName>Intapp Open Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Open Terms</fullName>
            </value>
            <value>
                <fullName>Intapp Open Experience</fullName>
            </value>
            <value>
                <fullName>Intapp Time Capture</fullName>
            </value>
            <value>
                <fullName>Intapp Time Cloud</fullName>
            </value>
            <value>
                <fullName>Intapp Time Cloud - Rekoop</fullName>
            </value>
            <value>
                <fullName>Intapp Time Core</fullName>
            </value>
            <value>
                <fullName>Intapp Time Mobile</fullName>
            </value>
            <value>
                <fullName>Intapp Walls</fullName>
            </value>
            <value>
                <fullName>CompliGuard Analyze</fullName>
            </value>
            <value>
                <fullName>CompliGuard Flow</fullName>
            </value>
            <value>
                <fullName>CompliGuard Protect</fullName>
            </value>
            <value>
                <fullName>LegalKey</fullName>
            </value>
            <value>
                <fullName>RollCall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>